examples/errors/duplicate_arg.vut




fn add(a, b) {
  return a + b
}

add(1, a = 2)
